--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,10 +26,10 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 //added by me
-//apply plugin: 'com.google.gms.google-services'
-//apply plugin: 'com.google.firebase:firebase-analytics'
-
+apply plugin: 'com.google.gms.google-services'
 //implementation platform('com.google.firebase:firebase-bom:32.7.2')
+//apply plugin: 'com.google.firebase.firebase-analytics'
+//implementation 'com.google.firebase:firebase-analytics'
 
 android {
     namespace "com.calma.calma"
