--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,8 +9,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-//        classpath "com.google.gms.google-services.gradle.plugin:4.4.1"
-//        id 'com.google.gms.google-services' version '4.4.1' apply false
+        classpath 'com.google.gms:google-services:4.4.1'
     }
 }
 
@@ -27,6 +26,7 @@ subprojects {
 }
 subprojects {
     project.evaluationDependsOn(':app')
+//    project.evaluationDependsOn('com.google.firebase:firebase-analytics')
 }
 
 tasks.register("clean", Delete) {
