--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,8 +50,11 @@ dependencies:
   #firebase Dependencies
   firebase_auth: ^4.17.4
   firebase_core: ^2.25.4
-  firebase_messaging: ^14.7.15
-  firebase_storage: ^11.6.5
+  firebase_messaging: ^14.7.16
+  firebase_storage: ^11.6.6
+
+
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
@@ -78,6 +81,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - asset/images/
+     - asset/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
