--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,21 +40,27 @@ dependencies:
   shared_preferences: ^2.2.2
   iconsax: ^0.0.8
 
-  speech_to_text: ^6.5.1
+  speech_to_text: ^6.6.0
 
   #Location Dependencies
   google_maps_flutter: ^2.5.3
   location: ^5.0.0
   flutter_polyline_points: ^2.0.0
+  geocoding: ^3.0.0
 
   #firebase Dependencies
   firebase_auth: ^4.17.4
   firebase_core: ^2.25.4
   firebase_messaging: ^14.7.16
   firebase_storage: ^11.6.6
+  firebase_app_check: ^0.2.1+14
 
+  #calender
+  table_calendar: ^3.1.0
 
   flutter_svg: ^2.0.10+1
+  razorpay_flutter: ^1.3.6
+  http: ^1.2.0
 
 dev_dependencies:
   flutter_test:
