--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
 
   speech_to_text: ^6.6.0
 
-  #Location Dependencies
+  #location Dependencies
   google_maps_flutter: ^2.5.3
   location: ^5.0.0
   flutter_polyline_points: ^2.0.0
@@ -63,6 +63,7 @@ dependencies:
   http: ^1.2.0
   url_launcher: ^6.3.1
   flutter_riverpod: ^2.6.1
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
